--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -2,8 +2,8 @@
 	"global": {
 		"locale": "Français",
 		"lang": "fr",
-		"openPharma": "OpenPharma",
-		"version": "WebUI 0.1.3"
+		"openpharma": "openpharma",
+		"version": "WebUI 0.2.1"
 	},
 	"home": {
 		"title": "Accueil"
@@ -72,6 +72,11 @@
 	},
 	"updates": {
 		"menu": "Bases de données",
-		"title": "Mises à jour des bases de données"
+		"title": "Mises à jour des bases de données",
+		"cis-button": "Mise à jour des spécialités",
+		"cip-button": "Mise à jour des présentations",
+		"compo-button": "Mise à jour des compositions",
+		"gener-button": "Mise à jour des groupes génériques",
+		"cpd-button": "Mise à jour des conditions de prescription et délivrances"
 	}
 }
