:green_heart: Improve Products view
:green_heart: Improve Products view
:key: Remove certificates
:shirt: Refactor Apis calls
:globe_with_meridians: Changes in i18n

--- a/src/locales/en-GB.json
+++ b/src/locales/en-GB.json
@@ -1,8 +1,7 @@
 {
 	"global": {
 		"locale": "English",
-		"lang": "en",
-		"openPharma": "OpenPharma",
+		"lang": "en-GB",
 		"version": "WebUI 0.1.3",
 		"openpharma": "openpharma"
 	},
