--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -3,7 +3,7 @@
 		"locale": "Français",
 		"lang": "fr-FR",
 		"openpharma": "openpharma",
-		"version": "WebUI 0.2.3"
+		"version": "WebUI 0.2.2"
 	},
 	"buttons": {
 		"yes-button": "Oui",
@@ -147,6 +147,17 @@
 			"__creation-error": "Erreur lors de la création du patient",
 			"__update-success": "Patient mis à jour avec succés",
 			"__update-error": "Error lors de la mise à jour du patient",
+			"error": "Une erreur est survenue"
+		}
+	},
+	"statistics": {
+		"menu": "Statistiques",
+		"title": "Statistiques",
+		"messages": {
+			"creation-success": "Patient créé avec succés",
+			"creation-error": "Erreur lors de la création du patient",
+			"update-success": "Patient mis à jour avec succés",
+			"update-error": "Error lors de la mise à jour du patient",
 			"error": "Une erreur est survenue"
 		}
 	},
